--- a/contacts.html
+++ b/contacts.html
@@ -17,8 +17,8 @@
       <input type="text" name="Your name" value=""/></br>  
     <label>Your email:</label>
       <input type="email" name="Your email"/></br>
-   <label>Your massage</label><br/>
-      <textarea rows="10" cols="30" name="Your massage">
+   <label>Your message</label><br/>
+      <textarea rows="10" cols="30" name="Your message">
     </textarea> <br/> <br/>
    <input type="submit"/>
 
