--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <td><em>Low</em></td>
     </tr>
     <tr style="height:50px">
-      <td>Network configoration</td>
+      <td>Network configuration</td>
       <td><em>Medium</em></td>
     </tr>
   </tbody>
